# semantic-llm-compressor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_pipeline.py
docs/: DESIGN_FOR_LLAMA.md  FINAL_REPORT.md  PROJECT_HISTORY.md  SAFETENSORS_REPORT.md  TECHNICAL_REPORT.md  THEORETICAL_IMPLICATIONS.md  TROUBLESHOOTING_GUIDE.md
docs/archive/: BENCHMARK_REPORT_GPT_NEO.md  CONV1D_ANALYSIS.md  DEBUG_SUMMARY.md  REPORT.md  WAVE1_MEMORY_STATUS.md  WAVE2_LAYER_QUALITY_ANALYSIS.md  WAVE3_ADAPTIVE_RANK_RESULTS.md
examples/: run_gptneo_compression.md  sample_results_kproj_only.json
scripts/: 5_benchmark_gpt_neo.py  debug_decoding_step.py  debug_svd_roundtrip_v2.py  generate_graph.py  test_compressed_vs_dense.py  test_multiple_layers.py
scripts/archive/: 0_prepare_model.py  1_compress_model.py  2_check_tensor_reconstruction.py  3_test_layer_on_llm.py  4_prepare_gpt_neo.py  check_file.py  compare_original_vs_compressed.py  debug_compare_generation.py  debug_layer_sensitivity.py  debug_storage_path.py  debug_svd_roundtrip.py  profile_memory_and_latency.py  tools
semantic_llm_compressor/: __init__.py  config.py  logging_utils.py
semantic_llm_compressor/algorithms/: __init__.py  factorization_policy.py  quantization.py  svd_compressor.py
semantic_llm_compressor/cli/: compress_cli.py  run_cli.py
semantic_llm_compressor/compression/: __init__.py  compressor.py  shard_worker.py
semantic_llm_compressor/eval/: eval_pipeline.py  (+1 more)
tests/: test_basic_imports.py  test_regression.py  verify_compression_flow.py  verify_core.py  verify_runtime_refined.py
(+11 files in other folders)
