[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-llm-compressor"
version = "0.1.0"
description = "LLM Compression using SVD and Quantization"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "safetensors",
    "transformers",
    "numpy",
    "tqdm"
]

[project.scripts]
compress-model = "semantic_llm_compressor.cli.compress_cli:main"
run-compressed = "semantic_llm_compressor.cli.run_cli:main"
